    if they are hidden by the invisibility spell, even if they don't have 80.0 Hiding )
  - Fixed bug #0000321. (Info Gump not setting boolean values to True if input is 1)
  - Poisoning now accepts stacked potions.
  - Reorganized the potion scripts.
  - Added possibility to cut bone parts into usable bones using scissors.
  - Fixed potion kegs.
 * Misc. Changes:
  - FAQ Updates.
 * Known Issues, Bugs, and Missing Features:
  - Some skills are still incomplete.
  - Spawn regions are incomplete.
    We welcome donated OSI-like spawn scripts!
  - Town/World regions are incomplete.
    We welcome donated OSI-like region scripts!
  - Possible that a few monsters are missing and/or incomplete.
  - Multis (Houses/Boats) are not currently supported.
    
Wolfpack 12.9.12 Beta (18. October 2004)
 * Core Changes:
  - Fixed a unix console error
  - Fixed a npc title loading problem (UTF-8)
  - Added an onResurrection event.
  - Hopefully fixed crashbug for NPC pathfinding.
  - Fix bug #0000342 ( "Show Npc Titles" treated as numeric value, instead of boolean )
  - Fix bug #0000341 ( set char.orgname on char creation )
  - The bloodcolor for NPCs can now be defined.
  - Containers and corpses ignore the object delay.
  - Fixed base definitions for multis.
  - Fixed items in multis being lost after two saves.
  - Fixed issues with walking (especially stairs).
  - Fixed bug #0000323. (World time not being loaded with binary saves)
  - Fixed bug #0000335. (Riding liches + toads)
  - Fixed bug #0000340. (Showing unicode properties crashes the server)
  - Allowed global teleporter tags.
  - Static tile color can now be retrieved via wolfpack.statics()
  - Only 100 spawnregions per cycle are respawned now.
  - Fixed even more UCS4 problems.
  - Fixed documentation for the socket object.
  - Changed some return values from true to none for socket methods.
  - Spawnregions have been rewritten for more speed and functionality.